# VoucherSnap

./: .gitignore  LICENSE  README.md  pyproject.toml
src/vouchersnap/: __init__.py  auth.py  cli.py  config.py  history.py  images.py  inat.py  models.py  scanner.py  ui.py
tests/: __init__.py
